update daemon circus config

--- a/devops/circus.ini
+++ b/devops/circus.ini
@@ -1,5 +1,5 @@
 [watcher:growth_studio]
 cmd = gunicorn -w 2 growth_studio.wsgi
-working_dir = /Users/fdhuang/write/growth-code/chapter5
+working_dir = /home/phodal/growth-studio
 copy_env = True
-virtualenv = /Users/fdhuang/write/py35env
+virtualenv = /home/phodal/py35env
